# ntgcalls

./: CMakeLists.txt  README.md
.github/workflows/: build-wheels.yml
cmake/: GitUtils.cmake
ntgcalls/include/ntgcalls/io/: base_io.hpp  threaded_reader.hpp
ntgcalls/src/io/: audio_shell_writer.cpp  shell_reader.cpp  threaded_reader.cpp
